# ulex

./: CMakeLists.txt  README.md
include/: ulex.h
include/ulex/: const.h  lexer.h  loc.h  src.h  tok.h  val.h
include/ulex/const/: kind.h  str.h
src/: lexer.c  tok.c
test/: c_lexer.c  tok.c
